--- a/css/sedoo_inventory.css
+++ b/css/sedoo_inventory.css
@@ -14,3 +14,8 @@
     padding: 0;
     margin:0
 }
+
+/* single template Sidebar */
+.inventory-single-content-page .contextual-inventory-sidebar {         
+    padding: 50px 0;
+}
