Save before new ACF file with bidirectionnal field test Mercredi 26/01 - 11h55

--- a/css/sedoo_inventory.css
+++ b/css/sedoo_inventory.css
@@ -31,7 +31,9 @@
 
 }
 .taxonomy-template aside, .archive-template aside  {
-    padding: 50px;
+    padding: 10px 15px;
+margin-top: 85px;
+background: #f0f0f0;
 }
 .inventory-single-content-page article .contactImg{
 width:100px;
