Revert "Save before new ACF file with bidirectionnal field test Mercredi 26/01 - 11h55"
This reverts commit 2ef89a9b87b7640b97b5b6a2fd12fdb34436f398.

--- a/css/sedoo_inventory.css
+++ b/css/sedoo_inventory.css
@@ -31,9 +31,7 @@
 
 }
 .taxonomy-template aside, .archive-template aside  {
-    padding: 10px 15px;
-margin-top: 85px;
-background: #f0f0f0;
+    padding: 50px;
 }
 .inventory-single-content-page article .contactImg{
 width:100px;
