--- a/css/sedoo_inventory.css
+++ b/css/sedoo_inventory.css
@@ -38,3 +38,62 @@ background: #f0f0f0;
 .inventory-single-content-page article .contactImg{
 width:100px;
 }
+.colorGrey{
+color:#999999!important;
+}
+.infoApptext{
+font-size:15px;
+}
+.infoApptext a:hover{
+color:#0000!important!important;
+text-decoration:none!important;
+}
+.imgApp{
+-webkit-box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.19); 
+box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.19);
+}
+.accordion{
+position:relative;
+cursor:pointer;
+border-radius:5px;
+padding:5px;
+margin-bottom:10px;
+background: rgb(250,250,250);
+border: 2px solid rgb(240,240,240);
+transition:ease all 0.3s;
+}
+.accordion h3{
+margin:0;
+}
+.accordion:hover{
+transition:ease all 0.3s;
+background-color:#F0F0F0;
+}
+.panel {
+display:block!important;
+padding: 0 12px;
+max-height: 0;
+overflow: hidden;
+background-color:#F0F0F0;
+border-radius:5px;
+transition: max-height 0.2s ease-out;
+margin-bottom:10px;
+}
+.accordion::after {
+content:'\02795';
+font-size:13px;
+color: #777;
+position:absolute;
+top:4px;
+right:4px;
+margin-left:5px;
+transition:ease all 0.3s;
+}
+
+.active{
+background-color:#F0F0F0;
+}
+.active:after {
+transition:ease all 0.3s;
+content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
