--- a/css/sedoo_inventory.css
+++ b/css/sedoo_inventory.css
@@ -89,6 +89,11 @@ right:4px;
 margin-left:5px;
 transition:ease all 0.3s;
 }
+
+.hideEmail{
+    display: none;
+} 
+
 /* CONFLIT AVEC TOUT ajout js de la classe active 
 .active{
 background-color:#F0F0F0;
